[package]
name = "rust-error-E0698"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.1.0", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
